<resources>
    <string name="app_name">StampLoadproject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page_title">Login Page title</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="account_forget">Forget Password? Click Here</string>
    <string name="Enter_Username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="btn_register">Click here to register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_account">Already have Account? Please Login</string>
    <string name="title_activity_stamp_card_pink_house">Pink house</string>
    <string name="promotion">Buy 12 Fish and Chips Meal to gain 1 plate of fish and chips Free</string>
    <string name="promotion_end_date">From: 15 May 2017  To 20 July 2017</string>
    <string name="gain_stamp">Gain Stamp</string>
    <string name="facebook_app_id">294849460953252</string>
    <string name="title_activity_main">Stamp-Load</string>
    <string name="feedback_fragment">Feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_feedback">FeedBack</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_feedback_one">feedbackActivityOne</string>
    <string name="title_activity_account_details">Account Details</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="low_storage_error">low_storage</string>
    <string name="no_camera_permission">no_camera_permission</string>
    <string name="ok">ok</string>
    <string name="permission_camera_rationale">permission_camera_rationale</string>
    <string name="barcode_error_format">barcode_error</string>
    <string name="no_barcode_captured">no_barcode</string>
    <string name="title_activity_main_class">MainClassActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="FCM_PREF">com.example.drake.stamploadproject.fcm_pref</string>
    <string name="FCM_TOKEN">com.example.drake.stamploadproject.fcm_token</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
