<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textBackground"
 >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="14dp"
                android:text="Sign Up"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText

                android:hint="@string/Enter_Username"
                android:id="@+id/client_name"
                android:paddingLeft="10dp"
                android:layout_marginTop="20px"
                android:inputType="textPersonName"
                android:maxLines="3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@drawable/user_36"
                android:drawablePadding="10dp"/>
            <EditText

                android:hint="@string/hint_email"
                android:id="@+id/client_email"
                android:maxLines="3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@android:drawable/ic_dialog_email"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/client_dateOfBirth"
                android:inputType="date"
                android:hint="@string/hint_dob"
                android:paddingLeft="10dp"
                android:layout_marginTop="20px"
                android:maxLines="3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@android:drawable/ic_menu_week"
                android:drawablePadding="8dp"/>
            <EditText
                android:id="@+id/mobile_number"
                android:inputType="phone"
                android:hint="Phone Number"
                android:paddingLeft="10dp"
                android:layout_marginTop="20px"
                android:maxLines="3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@android:drawable/stat_sys_phone_call"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/client_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:layout_marginTop="20px"
                android:maxLines="3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:drawablePadding="10dp"/>
            <EditText
                android:id="@+id/client_password_confirm"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:paddingLeft="10dp"
                android:layout_marginTop="20px"
                android:maxLines="3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:drawablePadding="10dp"/>




        </LinearLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="250px"
                android:layout_height="80px"
                android:layout_gravity="center"
                android:text="Register"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_login_shape"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




                <Button
                    android:id="@+id/GoToLoginPage"
                    android:background="@null"
                    android:textColor="@color/text_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/have_account"
                    />

            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>